# OnmyojiDesktopAssistant

./: .gitignore  CHANGELOG.MD  README.md  build.bat  function.py  jiejietupo.py  main.py  main.spec  mouse.py  mysignal.py  myui.py  myui.ui  pyproject.toml  requirements.txt  run.bat  tupo.py  update.json  update.py  window.py  yuhun.py  zhaohuan.py
.github/actions/setup-python/: action.yml
.github/workflows/: build.yml  main.yaml  main.yml  release.yml
package/: __init__.py  baiguiyexing.py  daoguantupo.py  function.py  huijuan.py  huodong.py  jiejietupo.py  log.py  mouse.py  rilun.py  update.py  window.py  xuanshangfengyin.py  yeyuanhuo.py  yongshengzhihai.py  yuhun.py  yuling.py  zhaohuan.py
src/package/: __init__.py  baiguiyexing.py  base_package.py  daoguantupo.py  douji.py  global_parameter.py  global_resource.py  guibingyanwu.py  huijuan.py  huodong.py  jiejietupo.py  juexing.py  liudaozhimen.py  miwen.py  qiling.py  rilun.py  tansuo.py  types.py  utils.py  xuanshangfengyin.py  yeyuanhuo.py  yingjieshilian.py  yongshengzhihai.py  yuhun.py  yuling.py  zhaohuan.py
src/resource/baiguiyexing/: assets.json
src/resource/daoguantupo/: assets.json
src/resource/douji/: assets.json
src/resource/global/: assets.json
src/resource/guibingyanwu/: assets.json
src/resource/huodong/: assets.json
src/resource/jiejietupo/: assets.json
src/resource/juexing/: assets.json
src/resource/miwen/: assets.json
src/ui/: effective_entry_analysis_widget.py  fluent.py  game_function_selector_widget.py  home_widget.py  icon.qrc  icon_rc.py  mainui.py  mainui.ui  mainui_ui.py  setting_widget.py  update_record.ui  update_record_ui.py  update_record_widget.py  upgrade_new_version.py  upgrade_new_version.ui  upgrade_new_version_widget.py  window_manager_widget.py
src/utils/: adapter.py  application.py  assets.py  config.py  coordinate.py  decorator.py  event.py  exception.py  function.py  global_task.py  gui.py  image.py  keyboard_listener.py  log.py  mysignal.py  mythread.py  paddle_model.py  paddleocr.py  point.py  restart.py  screenshot.py  shortcut.py  toast.py  update.py  upgrade.py  valid.py  version.py  window.py
tests/: test_connect.py  test_ja_window.py  test_rect.py
tests/package/: test_baiguiyexing.py  test_daoguantupo.py  test_douji.py  test_global.py  test_huijuan.py  test_huodong.py  test_jiejietupo.py  test_juexing.py  test_liudaozhimen.py  test_miwen.py  test_qiling.py  test_rilun.py  test_tansuo.py  test_xuanshangfengyin.py  test_yeyuanhuo.py  test_yingjieshilian.py  test_yongshengzhihai.py  test_yuhun.py  test_yuling.py  test_zhaohuan.py  utils.py
ui/: mainui.py  mainui.ui  updateui.py
utils/: config.py  event.py  function.py  gui.py  log.py  mouse.py  mysignal.py  mythread.py  toaster.py  update.py  upgrade.py  window.py
(+25 files in other folders)
