[tool.poetry]
name = "OnmyojiDesktopAssistant"
version = "2.0.7"
description = "适配网易阴阳师桌面版的辅助程序"
authors = ["AquamarineCyan <1057424730@qq.com>"]
readme = "README.md"
repository = "https://github.com/AquamarineCyan/OnmyojiDesktopAssistant"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
httpx = "^0.28.1"
numpy = "2.2.6"
opencv-python = "^4.12.0.88"
pillow = "^11.3.0"
pyautogui = "^0.9.54"
pydantic = "^2.11.9"
pynput = "^1.8.1"
pyside6 = "^6.10.1"
pywin32 = "^311"
pyyaml = "^6.0.3"
win11toast = "^0.35"
winshell = "^0.6"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.16.0"
pytest = "^8.4.2"

[tool.ruff]
line-length = 120

[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
